# cpp-2024-1-projektas

./: Aprasas  CMakeLists.txt  LICENSE  README.md  main.cpp  makefile
Ataskaitos/: pazymio_pasiskirstymas.txt
Ataskaitos/Arnas Šniokaitis/: LFF.ods  Laiko fiksavimo ataskaita.txt
Ataskaitos/tari9925/: laiko_fiksavimo_ataskaita.txt  lff.xlsx
Backend/: Data.cpp  Data.h  FileIO.cpp  FileIO.h  MainTest.cpp  TimeTracker.cpp  TimeTracker.h
frontend/: AbstractUIElement.h  Button.cpp  Button.h  Clock.cpp  Clock.h  CommentBox.cpp  CommentBox.h  DropBox.cpp  DropBox.h  EventWindow.cpp  EventWindow.h  MyWindow.cpp  MyWindow.h  SimulatedTimeTracker.h  Slider.cpp  Slider.h  Transparent.cpp  Transparent.h  Transperent.h  WindowBar.cpp  WindowBar.h  dataPoint.cpp  dataPoint.h
frontend/backend_singleton/: TimeTracker_Singleton.cpp  TimeTracker_Singleton.h
frontend/error_singleton/: Error_Singleton.cpp  Error_Singleton.h
frontend/longToChrono/: longConverter.cpp  longConverter.h
frontend/proxy/: front_back_proxy.cpp  front_back_proxy.h
res/: classDiagram.puml  logo.c
